--- a/Tp3_Regex.ipynb
+++ b/Tp3_Regex.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "id": "98bce14f-98b2-4855-99c3-284c9f0f1322",
    "metadata": {
     "jupyter": {
@@ -48,13 +48,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "db4c55db-2416-43bc-83b3-07eea37df2d7",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Alice', 'Alice', 'Among', 'As', 'After', 'As']\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = re.findall(r\"\\bA\\w+\\b\", s) \n",
+    "print(A)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -66,11 +77,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "4b499ed5-e972-4116-a721-dbfb29e781d5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['alice@example.com']\n"
+     ]
+    }
+   ],
+   "source": [
+    "email = re.findall(r\"\\b[\\w\\d\\.\\_\\%\\+\\-]+@[\\w\\d\\.\\_\\%\\+\\-]+\\.\\w{2,}\\b\", s)\n",
+    "print(email)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -82,11 +104,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ec71a1d9-d971-4119-9124-a3f993069eeb",
+   "execution_count": 51,
+   "id": "20da5bb5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['1', '2', '3', '4', '5', '6', '7', '8', '9', '0', '0', '8', '1', '0', '2', '0', '2', '3', '1', '2', '3', '1', '2', '3', '4', '5', '6', '7', '8', '9', '1', '9', '2', '1', '6', '8', '1', '1', '0', '0', '0', '0', '6', '3', '2', '2', '6', '1', '0', '1', '3', '1', '0', '1', '2', '3', '4', '5', '6', '7', '8', '9', '1', '3', '9', '7', '8', '1', '2', '3', '4', '5', '6', '7', '8', '9', '0']\n",
+      "77\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Cuales\n",
+    "digits = re.findall(r\"\\d\", s)\n",
+    "print(digits)\n",
+    "#Cuantos\n",
+    "print(len(digits))\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -98,11 +135,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "id": "084f2eb3-e67c-45bd-8460-b113b6794e82",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['https://www.treasurehunt.com']\n"
+     ]
+    }
+   ],
+   "source": [
+    "URLs = re.findall(r\"https?://.+\\.\\w{2,}\", s)\n",
+    "print(URLs)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -114,11 +162,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "id": "a88f57ea-c034-49e3-9586-bcf1a9b795f8",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['123-456-7890']\n"
+     ]
+    }
+   ],
+   "source": [
+    "phonos = re.findall(r\"\\d{3}-\\d{3}-\\d{4}\", s)\n",
+    "print(phonos)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -130,11 +189,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "id": "fc8577e1-8f37-4c29-91f1-314736687689",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "Once upon a time, in the enchanted land of Regexville, there lived a group of intrepid explorers.\n",
+      "Their leader, Alice, was known for her love of adventure and her trusty email address, alice@example.com.\n",
+      "Her phone number, 123-456-7890, was her lifeline in times of trouble.\n",
+      "One day, Alice received a mysterious letter with today's date: 08/10/2023. The letter hinted at an upcoming quest.\n",
+      "The explorers gathered at the local inn, where they found a weathered map marked with a hashtag: #adventure.\n",
+      "The map pointed to a hidden treasure on the website https://www.treasurehunt.com. The inn's address was 123 Main Street, Regexville, ZIP: 12345-6789.\n",
+      "Their journey took them through the ancient forest, where they stumbled upon a cave with cryptic inscriptions:\n",
+      "\"Java is amazing!\" and \"Java is equally fascinating!\" The explorers knew they were on the right path.\n",
+      "Inside the cave, they found a device with the IP address 192.168.1.1 and a MAC addres of 00-B0-D0-63-C2-26, which held valuable clues.\n",
+      "\n",
+      "Among the explorers, there was a wordsmith who loved finding words with three consecutive vowels:\n",
+      "\"boasting,\" \"quizzical,\" \"genuine,\" and \"queue\" were some of his favorites.\n",
+      "As they continued their adventure, they encountered Lorem Ipsum, a lorem ipsum generator who spoke in Latin:\n",
+      "\"Lorem ipsum dolor sit amet, consectetur adipiscing elit.\"\n",
+      "In their pursuit, they stumbled upon an ancient book with mysterious ISBN-10 and ISBN-13 numbers:\n",
+      "ISBN-10: 123456789X and ISBN-13: 978-1234567890.\n",
+      "Their journey was filled with unexpected twists and turns, much like the regex patterns they used to decipher clues.\n",
+      "After a long day, the explorers gathered around a campfire, sharing tales of their encounters. They realized that every step of their adventure was a puzzle waiting to be solved, just like the regex challenges they had conquered.\n",
+      "As they drifted off to sleep under a starlit sky, they knew that their quest for treasure and knowledge had only just begun, and the magic of Regexville would continue to guide their way.\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "subJava = re.sub(r\"Python\", r\"Java\", s)\n",
+    "print(subJava)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -146,11 +238,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "id": "1a47bad6-3a06-42d4-a8fb-5b68b9b91173",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['12345-6789']\n"
+     ]
+    }
+   ],
+   "source": [
+    "USzip = re.findall(r'\\b\\d{5}-?\\d{4}\\b', s)\n",
+    "print(USzip)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -162,11 +265,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "8c582872-3f44-46e1-b3d5-c185a248cedb",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['mysteriou', 'queue', 'mysteriou']\n"
+     ]
+    }
+   ],
+   "source": [
+    "Vowel3_Word = re.findall(r'\\w+[aeiou]{3,}', s)\n",
+    "print(Vowel3_Word)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -178,11 +292,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "b3ccfe62-4b3c-4ead-89f7-e33b52dd43c2",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['\"Python is amazing!\"', '\"Java is equally fascinating!\"', '\"boasting,\"', '\"quizzical,\"', '\"genuine,\"', '\"queue\"', '\"Lorem ipsum dolor sit amet, consectetur adipiscing elit.\"']\n"
+     ]
+    }
+   ],
+   "source": [
+    "quotes = re.findall(r'\\\"[^\\s][^\\\"]+[^\\s]\\\"', s)\n",
+    "print(quotes)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -194,11 +319,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "cf67cec5-9f4a-42ac-866f-4f28111d2f1f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['08/10/2023']\n"
+     ]
+    }
+   ],
+   "source": [
+    "dates = re.findall(r'\\d{2}/\\d{2}/\\d{4}', s)\n",
+    "print(dates)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -210,11 +346,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "67e053c3-c06c-490d-83d2-13d5873df074",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['upon', 'a', 'time', 'in', 'the', 'enchanted', 'land', 'of', 'there', 'lived', 'a', 'group', 'of', 'intrepid', 'explorers', 'leader', 'was', 'known', 'for', 'her', 'love', 'of', 'adventure', 'and', 'her', 'trusty', 'email', 'address', 'alice', 'example', 'com', 'phone', 'number', 'was', 'her', 'lifeline', 'in', 'times', 'of', 'trouble', 'day', 'received', 'a', 'mysterious', 'letter', 'with', 'today', 's', 'date', 'letter', 'hinted', 'at', 'an', 'upcoming', 'quest', 'explorers', 'gathered', 'at', 'the', 'local', 'inn', 'where', 'they', 'found', 'a', 'weathered', 'map', 'marked', 'with', 'a', 'hashtag', 'adventure', 'map', 'pointed', 'to', 'a', 'hidden', 'treasure', 'on', 'the', 'website', 'https', 'www', 'treasurehunt', 'com', 'inn', 's', 'address', 'was', 'journey', 'took', 'them', 'through', 'the', 'ancient', 'forest', 'where', 'they', 'stumbled', 'upon', 'a', 'cave', 'with', 'cryptic', 'inscriptions', 'is', 'amazing', 'and', 'is', 'equally', 'fascinating', 'explorers', 'knew', 'they', 'were', 'on', 'the', 'right', 'path', 'the', 'cave', 'they', 'found', 'a', 'device', 'with', 'the', 'address', 'and', 'a', 'addres', 'of', 'which', 'held', 'valuable', 'clues', 'the', 'explorers', 'there', 'was', 'a', 'wordsmith', 'who', 'loved', 'finding', 'words', 'with', 'three', 'consecutive', 'vowels', 'boasting', 'quizzical', 'genuine', 'and', 'queue', 'were', 'some', 'of', 'his', 'favorites', 'they', 'continued', 'their', 'adventure', 'they', 'encountered', 'a', 'lorem', 'ipsum', 'generator', 'who', 'spoke', 'in', 'ipsum', 'dolor', 'sit', 'amet', 'consectetur', 'adipiscing', 'elit', 'their', 'pursuit', 'they', 'stumbled', 'upon', 'an', 'ancient', 'book', 'with', 'mysterious', 'and', 'numbers', 'and', 'journey', 'was', 'filled', 'with', 'unexpected', 'twists', 'and', 'turns', 'much', 'like', 'the', 'regex', 'patterns', 'they', 'used', 'to', 'decipher', 'clues', 'a', 'long', 'day', 'the', 'explorers', 'gathered', 'around', 'a', 'campfire', 'sharing', 'tales', 'of', 'their', 'encounters', 'realized', 'that', 'every', 'step', 'of', 'their', 'adventure', 'was', 'a', 'puzzle', 'waiting', 'to', 'be', 'solved', 'just', 'like', 'the', 'regex', 'challenges', 'they', 'had', 'conquered', 'they', 'drifted', 'off', 'to', 'sleep', 'under', 'a', 'starlit', 'sky', 'they', 'knew', 'that', 'their', 'quest', 'for', 'treasure', 'and', 'knowledge', 'had', 'only', 'just', 'begun', 'and', 'the', 'magic', 'of', 'would', 'continue', 'to', 'guide', 'their', 'way']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "279"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Cuales\n",
+    "lowercase = re.findall(r'\\b[a-z]+\\b', s)\n",
+    "print(lowercase)\n",
+    "#Cuantas\n",
+    "len(lowercase)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -226,11 +386,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "93e50146-3390-46d7-8440-23dc4f0b5e5f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['#adventure']\n"
+     ]
+    }
+   ],
+   "source": [
+    "hashtags = re.findall(r'#\\w+', s)\n",
+    "print(hashtags)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -242,11 +413,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "id": "cf458093-044e-47f8-bdac-4d8ce22669ee",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['123456789X', '978-1234567890']\n"
+     ]
+    }
+   ],
+   "source": [
+    "ISBN = re.findall(r'\\d{9}.|\\d{3}?-?\\d{10}', s)\n",
+    "print(ISBN)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -258,11 +440,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "id": "8f44b3b6-be95-48ab-af59-e7bc2c26a652",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['there', 'lived', 'group', 'Their', 'Alice', 'known', 'email', 'alice', 'phone', 'times', 'Alice', 'today', 'quest', 'local', 'where', 'found', 'https', '12345', 'Their', 'where', 'right', 'found', 'which', 'clues', 'Among', 'there', 'loved', 'words', 'three', 'queue', 'their', 'Lorem', 'Ipsum', 'lorem', 'ipsum', 'spoke', 'Latin', 'Lorem', 'ipsum', 'dolor', 'their', 'Their', 'turns', 'regex', 'clues', 'After', 'tales', 'their', 'every', 'their', 'regex', 'sleep', 'under', 'their', 'quest', 'begun', 'magic', 'would', 'guide', 'their']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "60"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Cuales\n",
+    "word5 = re.findall(r'\\b\\w{5}\\b', s)\n",
+    "print(word5)\n",
+    "#Cuantas\n",
+    "len(word5)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -274,11 +480,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "id": "2a0082f4-c83b-44fc-a710-ae0dab06bc1d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['192.168.1.1']\n"
+     ]
+    }
+   ],
+   "source": [
+    "IPv4 = re.findall(r'\\d{1,3}\\.\\d{1,3}\\.\\d{1,3}\\.\\d{1,3}', s)\n",
+    "print(IPv4)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -290,11 +507,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "id": "65481a0a-c36c-4b2a-a354-0393c98520cc",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['upcoming', 'amazing', 'fascinating', 'finding', 'boasting', 'adipiscing', 'sharing', 'waiting']\n"
+     ]
+    }
+   ],
+   "source": [
+    "ingW = re.findall(r'\\w+ing', s)\n",
+    "print(ingW)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -306,11 +534,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "id": "014b0956-6ef8-46a1-8f0b-635e8bbad63b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['00-B0-D0-63-C2-26']\n"
+     ]
+    }
+   ],
+   "source": [
+    "MAC = re.findall(r'\\w{2}-\\w{2}-\\w{2}-\\w{2}-\\w{2}-\\w{2}', s)\n",
+    "print(MAC)"
+   ]
   }
  ],
  "metadata": {
@@ -329,7 +568,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
